# ai-insight-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/docs/: engineering.md  handbook.md  security.md
frontend/: app.py
src/assistant/: __init__.py  agent.py  api.py  config.py  database.py  ingest.py  retrieval.py  tools.py
tests/: test_api.py  test_database.py  test_retrieval.py
