[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-insight-assistant"
version = "1.0.0"
description = "An assistant that answers company questions over documents (RAG) and data (SQL agent)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2",
    "anthropic>=0.39",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
frontend = ["streamlit>=1.30", "requests>=2.31"]
dev = ["pytest>=7.4", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
